<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:background="@drawable/ic_bkorange"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/Heading_text"
        android:textSize="37sp"
        android:textStyle="bold"
        android:textColor="@color/Black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:gravity="center"
        android:text="@string/Login_to_continue"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:hint="Username"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:background="@color/Transparent"
            android:id="@+id/login_forget"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Lets_go"
            android:textStyle="bold"
            android:id="@+id/login_lets_go"
            android:background="@color/Black"
            android:textColor="@color/White"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/login_signup"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:background="@color/White"
            android:textColor="@color/Black"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>